src/y.output
   0  $accept : programa $end

   1  programa : ID BEGIN sentencias END

   2  sentencias : sentencias sentencia ';'
   3             | sentencia ';'

   4  sentencia : sentencia_declarativa
   5            | sentencia_ejecutable

   6  sentencia_declarativa : declaracion_variable
   7                        | declaracion_funciones
   8                        | declaracion_subtipo

   9  declaracion_variable : tipo variables

  10  tipo : INTEGER
  11       | DOUBLE

  12  declaracion_subtipo : TYPEDEF ID ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'
  13                      | TYPEDEF TRIPLE '<' tipo '>' ID

  14  declaracion_funciones : tipo FUN ID parametros_formal BEGIN cuerpo_funcion END
  15                        | ID FUN ID parametros_formal BEGIN cuerpo_funcion END

  16  parametros_formal : parametros_formal parametro ','
  17                    | parametro

  18  parametro : tipo ID

  19  cuerpo_funcion : sentencias RET '(' expresion_arit ')'
  20                 | sentencias

  21  sentencia_ejecutable : asignacion
  22                       | sentencia_IF
  23                       | sentencia_WHILE
  24                       | sentencia_goto
  25                       | OUTF '(' expresion_arit ')'
  26                       | OUTF '(' cadena ')'

  27  asignacion : ID ASIGNACION expresion_arit
  28             | ID '{' CTE '}' ASIGNACION expresion_arit

  29  invocacion : ID '(' parametro_real ')'
  30             | ID '(' tipo parametros_formal ')'

  31  parametro_real : list_expre

  32  list_expre : list_expre ',' expresion_arit
  33             | expresion_arit

  34  expresion_arit : expresion_arit '+' termino
  35                 | expresion_arit '-' termino
  36                 | termino

  37  termino : termino '*' factor
  38          | termino '/' factor
  39          | factor

  40  factor : ID
  41         | CTE_con_sig
  42         | invocacion
  43         | ID '{' CTE_con_sig '}'

  44  variables : variables ',' ID
  45            | ID

  46  CTE_con_sig : CTE
  47              | '-' CTE

  48  sentencia_IF : IF '(' condicion ')' bloque_unidad bloque_else END_IF ';'
  49               | IF '(' condicion ')' bloque_unidad END_IF ';'

  50  condicion : expresion_arit comparador expresion_arit
  51            | expresion_arit

  52  comparador : '>'
  53             | MAYORIGUAL
  54             | '<'
  55             | MENORIGUAL
  56             | '='
  57             | DISTINTO

  58  bloque_else : bloque_else_simple
  59              | bloque_else_multiple

  60  bloque_else_multiple : ELSE BEGIN bloque_sent_ejecutables END

  61  bloque_else_simple : THEN ELSE bloque_sentencia_simple

  62  bloque_unidad : bloque_unidad_simple
  63                | bloque_unidad_multiple

  64  bloque_unidad_multiple : THEN BEGIN bloque_sent_ejecutables END

  65  bloque_unidad_simple : THEN bloque_sentencia_simple

  66  bloque_sent_ejecutables : bloque_sent_ejecutables bloque_sentencia_simple
  67                          | bloque_sentencia_simple

  68  bloque_sentencia_simple : sentencia_ejecutable

  69  cadena : '[' CADENAMULTILINEA ']'
  70         | '[' ']'

  71  sentencia_WHILE : WHILE '(' condicion ')' bloque_unidad ';'

  72  sentencia_goto : GOTO ETIQUETA

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	.  error

	programa  goto 2


state 1
	programa : ID . BEGIN sentencias END  (1)

	BEGIN  shift 3
	.  error


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	programa : ID BEGIN . sentencias END  (1)

	IF  shift 4
	OUTF  shift 5
	TYPEDEF  shift 6
	ID  shift 7
	WHILE  shift 8
	GOTO  shift 9
	INTEGER  shift 10
	DOUBLE  shift 11
	.  error

	sentencias  goto 12
	sentencia  goto 13
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	declaracion_variable  goto 16
	declaracion_funciones  goto 17
	declaracion_subtipo  goto 18
	tipo  goto 19
	asignacion  goto 20
	sentencia_IF  goto 21
	sentencia_WHILE  goto 22
	sentencia_goto  goto 23


state 4
	sentencia_IF : IF . '(' condicion ')' bloque_unidad bloque_else END_IF ';'  (48)
	sentencia_IF : IF . '(' condicion ')' bloque_unidad END_IF ';'  (49)

	'('  shift 24
	.  error


state 5
	sentencia_ejecutable : OUTF . '(' expresion_arit ')'  (25)
	sentencia_ejecutable : OUTF . '(' cadena ')'  (26)

	'('  shift 25
	.  error


state 6
	declaracion_subtipo : TYPEDEF . ID ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (12)
	declaracion_subtipo : TYPEDEF . TRIPLE '<' tipo '>' ID  (13)

	ID  shift 26
	TRIPLE  shift 27
	.  error


state 7
	declaracion_funciones : ID . FUN ID parametros_formal BEGIN cuerpo_funcion END  (15)
	asignacion : ID . ASIGNACION expresion_arit  (27)
	asignacion : ID . '{' CTE '}' ASIGNACION expresion_arit  (28)

	FUN  shift 28
	ASIGNACION  shift 29
	'{'  shift 30
	.  error


state 8
	sentencia_WHILE : WHILE . '(' condicion ')' bloque_unidad ';'  (71)

	'('  shift 31
	.  error


state 9
	sentencia_goto : GOTO . ETIQUETA  (72)

	ETIQUETA  shift 32
	.  error


state 10
	tipo : INTEGER .  (10)

	.  reduce 10


state 11
	tipo : DOUBLE .  (11)

	.  reduce 11


state 12
	programa : ID BEGIN sentencias . END  (1)
	sentencias : sentencias . sentencia ';'  (2)

	IF  shift 4
	END  shift 33
	OUTF  shift 5
	TYPEDEF  shift 6
	ID  shift 7
	WHILE  shift 8
	GOTO  shift 9
	INTEGER  shift 10
	DOUBLE  shift 11
	.  error

	sentencia  goto 34
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	declaracion_variable  goto 16
	declaracion_funciones  goto 17
	declaracion_subtipo  goto 18
	tipo  goto 19
	asignacion  goto 20
	sentencia_IF  goto 21
	sentencia_WHILE  goto 22
	sentencia_goto  goto 23


state 13
	sentencias : sentencia . ';'  (3)

	';'  shift 35
	.  error


state 14
	sentencia : sentencia_declarativa .  (4)

	.  reduce 4


state 15
	sentencia : sentencia_ejecutable .  (5)

	.  reduce 5


state 16
	sentencia_declarativa : declaracion_variable .  (6)

	.  reduce 6


state 17
	sentencia_declarativa : declaracion_funciones .  (7)

	.  reduce 7


state 18
	sentencia_declarativa : declaracion_subtipo .  (8)

	.  reduce 8


state 19
	declaracion_variable : tipo . variables  (9)
	declaracion_funciones : tipo . FUN ID parametros_formal BEGIN cuerpo_funcion END  (14)

	FUN  shift 36
	ID  shift 37
	.  error

	variables  goto 38


state 20
	sentencia_ejecutable : asignacion .  (21)

	.  reduce 21


state 21
	sentencia_ejecutable : sentencia_IF .  (22)

	.  reduce 22


state 22
	sentencia_ejecutable : sentencia_WHILE .  (23)

	.  reduce 23


state 23
	sentencia_ejecutable : sentencia_goto .  (24)

	.  reduce 24


state 24
	sentencia_IF : IF '(' . condicion ')' bloque_unidad bloque_else END_IF ';'  (48)
	sentencia_IF : IF '(' . condicion ')' bloque_unidad END_IF ';'  (49)

	CTE  shift 39
	ID  shift 40
	'-'  shift 41
	.  error

	CTE_con_sig  goto 42
	expresion_arit  goto 43
	invocacion  goto 44
	termino  goto 45
	factor  goto 46
	condicion  goto 47


state 25
	sentencia_ejecutable : OUTF '(' . expresion_arit ')'  (25)
	sentencia_ejecutable : OUTF '(' . cadena ')'  (26)

	CTE  shift 39
	ID  shift 40
	'-'  shift 41
	'['  shift 48
	.  error

	CTE_con_sig  goto 42
	expresion_arit  goto 49
	cadena  goto 50
	invocacion  goto 44
	termino  goto 45
	factor  goto 46


state 26
	declaracion_subtipo : TYPEDEF ID . ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (12)

	ASIGNACION  shift 51
	.  error


state 27
	declaracion_subtipo : TYPEDEF TRIPLE . '<' tipo '>' ID  (13)

	'<'  shift 52
	.  error


state 28
	declaracion_funciones : ID FUN . ID parametros_formal BEGIN cuerpo_funcion END  (15)

	ID  shift 53
	.  error


state 29
	asignacion : ID ASIGNACION . expresion_arit  (27)

	CTE  shift 39
	ID  shift 40
	'-'  shift 41
	.  error

	CTE_con_sig  goto 42
	expresion_arit  goto 54
	invocacion  goto 44
	termino  goto 45
	factor  goto 46


state 30
	asignacion : ID '{' . CTE '}' ASIGNACION expresion_arit  (28)

	CTE  shift 55
	.  error


state 31
	sentencia_WHILE : WHILE '(' . condicion ')' bloque_unidad ';'  (71)

	CTE  shift 39
	ID  shift 40
	'-'  shift 41
	.  error

	CTE_con_sig  goto 42
	expresion_arit  goto 43
	invocacion  goto 44
	termino  goto 45
	factor  goto 46
	condicion  goto 56


state 32
	sentencia_goto : GOTO ETIQUETA .  (72)

	.  reduce 72


state 33
	programa : ID BEGIN sentencias END .  (1)

	.  reduce 1


state 34
	sentencias : sentencias sentencia . ';'  (2)

	';'  shift 57
	.  error


state 35
	sentencias : sentencia ';' .  (3)

	.  reduce 3


state 36
	declaracion_funciones : tipo FUN . ID parametros_formal BEGIN cuerpo_funcion END  (14)

	ID  shift 58
	.  error


state 37
	variables : ID .  (45)

	.  reduce 45


state 38
	declaracion_variable : tipo variables .  (9)
	variables : variables . ',' ID  (44)

	','  shift 59
	';'  reduce 9


state 39
	CTE_con_sig : CTE .  (46)

	.  reduce 46


state 40
	invocacion : ID . '(' parametro_real ')'  (29)
	invocacion : ID . '(' tipo parametros_formal ')'  (30)
	factor : ID .  (40)
	factor : ID . '{' CTE_con_sig '}'  (43)

	'{'  shift 60
	'('  shift 61
	IF  reduce 40
	THEN  reduce 40
	ELSE  reduce 40
	END  reduce 40
	END_IF  reduce 40
	OUTF  reduce 40
	ID  reduce 40
	WHILE  reduce 40
	GOTO  reduce 40
	MAYORIGUAL  reduce 40
	MENORIGUAL  reduce 40
	DISTINTO  reduce 40
	';'  reduce 40
	','  reduce 40
	'<'  reduce 40
	'>'  reduce 40
	')'  reduce 40
	'+'  reduce 40
	'-'  reduce 40
	'*'  reduce 40
	'/'  reduce 40
	'='  reduce 40


state 41
	CTE_con_sig : '-' . CTE  (47)

	CTE  shift 62
	.  error


state 42
	factor : CTE_con_sig .  (41)

	.  reduce 41


state 43
	expresion_arit : expresion_arit . '+' termino  (34)
	expresion_arit : expresion_arit . '-' termino  (35)
	condicion : expresion_arit . comparador expresion_arit  (50)
	condicion : expresion_arit .  (51)

	MAYORIGUAL  shift 63
	MENORIGUAL  shift 64
	DISTINTO  shift 65
	'<'  shift 66
	'>'  shift 67
	'+'  shift 68
	'-'  shift 69
	'='  shift 70
	')'  reduce 51

	comparador  goto 71


state 44
	factor : invocacion .  (42)

	.  reduce 42


state 45
	expresion_arit : termino .  (36)
	termino : termino . '*' factor  (37)
	termino : termino . '/' factor  (38)

	'*'  shift 72
	'/'  shift 73
	IF  reduce 36
	THEN  reduce 36
	ELSE  reduce 36
	END  reduce 36
	END_IF  reduce 36
	OUTF  reduce 36
	ID  reduce 36
	WHILE  reduce 36
	GOTO  reduce 36
	MAYORIGUAL  reduce 36
	MENORIGUAL  reduce 36
	DISTINTO  reduce 36
	';'  reduce 36
	','  reduce 36
	'<'  reduce 36
	'>'  reduce 36
	')'  reduce 36
	'+'  reduce 36
	'-'  reduce 36
	'='  reduce 36


state 46
	termino : factor .  (39)

	.  reduce 39


state 47
	sentencia_IF : IF '(' condicion . ')' bloque_unidad bloque_else END_IF ';'  (48)
	sentencia_IF : IF '(' condicion . ')' bloque_unidad END_IF ';'  (49)

	')'  shift 74
	.  error


state 48
	cadena : '[' . CADENAMULTILINEA ']'  (69)
	cadena : '[' . ']'  (70)

	CADENAMULTILINEA  shift 75
	']'  shift 76
	.  error


state 49
	sentencia_ejecutable : OUTF '(' expresion_arit . ')'  (25)
	expresion_arit : expresion_arit . '+' termino  (34)
	expresion_arit : expresion_arit . '-' termino  (35)

	')'  shift 77
	'+'  shift 68
	'-'  shift 69
	.  error


state 50
	sentencia_ejecutable : OUTF '(' cadena . ')'  (26)

	')'  shift 78
	.  error


state 51
	declaracion_subtipo : TYPEDEF ID ASIGNACION . tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (12)

	INTEGER  shift 10
	DOUBLE  shift 11
	.  error

	tipo  goto 79


state 52
	declaracion_subtipo : TYPEDEF TRIPLE '<' . tipo '>' ID  (13)

	INTEGER  shift 10
	DOUBLE  shift 11
	.  error

	tipo  goto 80


state 53
	declaracion_funciones : ID FUN ID . parametros_formal BEGIN cuerpo_funcion END  (15)

	INTEGER  shift 10
	DOUBLE  shift 11
	.  error

	tipo  goto 81
	parametros_formal  goto 82
	parametro  goto 83


state 54
	asignacion : ID ASIGNACION expresion_arit .  (27)
	expresion_arit : expresion_arit . '+' termino  (34)
	expresion_arit : expresion_arit . '-' termino  (35)

	'+'  shift 68
	'-'  shift 69
	IF  reduce 27
	THEN  reduce 27
	ELSE  reduce 27
	END  reduce 27
	END_IF  reduce 27
	OUTF  reduce 27
	ID  reduce 27
	WHILE  reduce 27
	GOTO  reduce 27
	';'  reduce 27


state 55
	asignacion : ID '{' CTE . '}' ASIGNACION expresion_arit  (28)

	'}'  shift 84
	.  error


state 56
	sentencia_WHILE : WHILE '(' condicion . ')' bloque_unidad ';'  (71)

	')'  shift 85
	.  error


state 57
	sentencias : sentencias sentencia ';' .  (2)

	.  reduce 2


state 58
	declaracion_funciones : tipo FUN ID . parametros_formal BEGIN cuerpo_funcion END  (14)

	INTEGER  shift 10
	DOUBLE  shift 11
	.  error

	tipo  goto 81
	parametros_formal  goto 86
	parametro  goto 83


state 59
	variables : variables ',' . ID  (44)

	ID  shift 87
	.  error


state 60
	factor : ID '{' . CTE_con_sig '}'  (43)

	CTE  shift 39
	'-'  shift 41
	.  error

	CTE_con_sig  goto 88


state 61
	invocacion : ID '(' . parametro_real ')'  (29)
	invocacion : ID '(' . tipo parametros_formal ')'  (30)

	CTE  shift 39
	ID  shift 40
	INTEGER  shift 10
	DOUBLE  shift 11
	'-'  shift 41
	.  error

	tipo  goto 89
	CTE_con_sig  goto 42
	expresion_arit  goto 90
	invocacion  goto 44
	parametro_real  goto 91
	list_expre  goto 92
	termino  goto 45
	factor  goto 46


state 62
	CTE_con_sig : '-' CTE .  (47)

	.  reduce 47


state 63
	comparador : MAYORIGUAL .  (53)

	.  reduce 53


state 64
	comparador : MENORIGUAL .  (55)

	.  reduce 55


state 65
	comparador : DISTINTO .  (57)

	.  reduce 57


state 66
	comparador : '<' .  (54)

	.  reduce 54


state 67
	comparador : '>' .  (52)

	.  reduce 52


state 68
	expresion_arit : expresion_arit '+' . termino  (34)

	CTE  shift 39
	ID  shift 40
	'-'  shift 41
	.  error

	CTE_con_sig  goto 42
	invocacion  goto 44
	termino  goto 93
	factor  goto 46


state 69
	expresion_arit : expresion_arit '-' . termino  (35)

	CTE  shift 39
	ID  shift 40
	'-'  shift 41
	.  error

	CTE_con_sig  goto 42
	invocacion  goto 44
	termino  goto 94
	factor  goto 46


state 70
	comparador : '=' .  (56)

	.  reduce 56


state 71
	condicion : expresion_arit comparador . expresion_arit  (50)

	CTE  shift 39
	ID  shift 40
	'-'  shift 41
	.  error

	CTE_con_sig  goto 42
	expresion_arit  goto 95
	invocacion  goto 44
	termino  goto 45
	factor  goto 46


state 72
	termino : termino '*' . factor  (37)

	CTE  shift 39
	ID  shift 40
	'-'  shift 41
	.  error

	CTE_con_sig  goto 42
	invocacion  goto 44
	factor  goto 96


state 73
	termino : termino '/' . factor  (38)

	CTE  shift 39
	ID  shift 40
	'-'  shift 41
	.  error

	CTE_con_sig  goto 42
	invocacion  goto 44
	factor  goto 97


state 74
	sentencia_IF : IF '(' condicion ')' . bloque_unidad bloque_else END_IF ';'  (48)
	sentencia_IF : IF '(' condicion ')' . bloque_unidad END_IF ';'  (49)

	THEN  shift 98
	.  error

	bloque_unidad  goto 99
	bloque_unidad_simple  goto 100
	bloque_unidad_multiple  goto 101


state 75
	cadena : '[' CADENAMULTILINEA . ']'  (69)

	']'  shift 102
	.  error


state 76
	cadena : '[' ']' .  (70)

	.  reduce 70


state 77
	sentencia_ejecutable : OUTF '(' expresion_arit ')' .  (25)

	.  reduce 25


state 78
	sentencia_ejecutable : OUTF '(' cadena ')' .  (26)

	.  reduce 26


state 79
	declaracion_subtipo : TYPEDEF ID ASIGNACION tipo . '{' CTE_con_sig ',' CTE_con_sig '}'  (12)

	'{'  shift 103
	.  error


state 80
	declaracion_subtipo : TYPEDEF TRIPLE '<' tipo . '>' ID  (13)

	'>'  shift 104
	.  error


state 81
	parametro : tipo . ID  (18)

	ID  shift 105
	.  error


state 82
	declaracion_funciones : ID FUN ID parametros_formal . BEGIN cuerpo_funcion END  (15)
	parametros_formal : parametros_formal . parametro ','  (16)

	BEGIN  shift 106
	INTEGER  shift 10
	DOUBLE  shift 11
	.  error

	tipo  goto 81
	parametro  goto 107


state 83
	parametros_formal : parametro .  (17)

	.  reduce 17


state 84
	asignacion : ID '{' CTE '}' . ASIGNACION expresion_arit  (28)

	ASIGNACION  shift 108
	.  error


state 85
	sentencia_WHILE : WHILE '(' condicion ')' . bloque_unidad ';'  (71)

	THEN  shift 98
	.  error

	bloque_unidad  goto 109
	bloque_unidad_simple  goto 100
	bloque_unidad_multiple  goto 101


state 86
	declaracion_funciones : tipo FUN ID parametros_formal . BEGIN cuerpo_funcion END  (14)
	parametros_formal : parametros_formal . parametro ','  (16)

	BEGIN  shift 110
	INTEGER  shift 10
	DOUBLE  shift 11
	.  error

	tipo  goto 81
	parametro  goto 107


state 87
	variables : variables ',' ID .  (44)

	.  reduce 44


state 88
	factor : ID '{' CTE_con_sig . '}'  (43)

	'}'  shift 111
	.  error


state 89
	invocacion : ID '(' tipo . parametros_formal ')'  (30)

	INTEGER  shift 10
	DOUBLE  shift 11
	.  error

	tipo  goto 81
	parametros_formal  goto 112
	parametro  goto 83


state 90
	list_expre : expresion_arit .  (33)
	expresion_arit : expresion_arit . '+' termino  (34)
	expresion_arit : expresion_arit . '-' termino  (35)

	'+'  shift 68
	'-'  shift 69
	','  reduce 33
	')'  reduce 33


state 91
	invocacion : ID '(' parametro_real . ')'  (29)

	')'  shift 113
	.  error


state 92
	parametro_real : list_expre .  (31)
	list_expre : list_expre . ',' expresion_arit  (32)

	','  shift 114
	')'  reduce 31


state 93
	expresion_arit : expresion_arit '+' termino .  (34)
	termino : termino . '*' factor  (37)
	termino : termino . '/' factor  (38)

	'*'  shift 72
	'/'  shift 73
	IF  reduce 34
	THEN  reduce 34
	ELSE  reduce 34
	END  reduce 34
	END_IF  reduce 34
	OUTF  reduce 34
	ID  reduce 34
	WHILE  reduce 34
	GOTO  reduce 34
	MAYORIGUAL  reduce 34
	MENORIGUAL  reduce 34
	DISTINTO  reduce 34
	';'  reduce 34
	','  reduce 34
	'<'  reduce 34
	'>'  reduce 34
	')'  reduce 34
	'+'  reduce 34
	'-'  reduce 34
	'='  reduce 34


state 94
	expresion_arit : expresion_arit '-' termino .  (35)
	termino : termino . '*' factor  (37)
	termino : termino . '/' factor  (38)

	'*'  shift 72
	'/'  shift 73
	IF  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	END  reduce 35
	END_IF  reduce 35
	OUTF  reduce 35
	ID  reduce 35
	WHILE  reduce 35
	GOTO  reduce 35
	MAYORIGUAL  reduce 35
	MENORIGUAL  reduce 35
	DISTINTO  reduce 35
	';'  reduce 35
	','  reduce 35
	'<'  reduce 35
	'>'  reduce 35
	')'  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'='  reduce 35


state 95
	expresion_arit : expresion_arit . '+' termino  (34)
	expresion_arit : expresion_arit . '-' termino  (35)
	condicion : expresion_arit comparador expresion_arit .  (50)

	'+'  shift 68
	'-'  shift 69
	')'  reduce 50


state 96
	termino : termino '*' factor .  (37)

	.  reduce 37


state 97
	termino : termino '/' factor .  (38)

	.  reduce 38


state 98
	bloque_unidad_multiple : THEN . BEGIN bloque_sent_ejecutables END  (64)
	bloque_unidad_simple : THEN . bloque_sentencia_simple  (65)

	IF  shift 4
	BEGIN  shift 115
	OUTF  shift 5
	ID  shift 116
	WHILE  shift 8
	GOTO  shift 9
	.  error

	sentencia_ejecutable  goto 117
	asignacion  goto 20
	sentencia_IF  goto 21
	sentencia_WHILE  goto 22
	sentencia_goto  goto 23
	bloque_sentencia_simple  goto 118


state 99
	sentencia_IF : IF '(' condicion ')' bloque_unidad . bloque_else END_IF ';'  (48)
	sentencia_IF : IF '(' condicion ')' bloque_unidad . END_IF ';'  (49)

	THEN  shift 119
	ELSE  shift 120
	END_IF  shift 121
	.  error

	bloque_else  goto 122
	bloque_else_simple  goto 123
	bloque_else_multiple  goto 124


state 100
	bloque_unidad : bloque_unidad_simple .  (62)

	.  reduce 62


state 101
	bloque_unidad : bloque_unidad_multiple .  (63)

	.  reduce 63


state 102
	cadena : '[' CADENAMULTILINEA ']' .  (69)

	.  reduce 69


state 103
	declaracion_subtipo : TYPEDEF ID ASIGNACION tipo '{' . CTE_con_sig ',' CTE_con_sig '}'  (12)

	CTE  shift 39
	'-'  shift 41
	.  error

	CTE_con_sig  goto 125


state 104
	declaracion_subtipo : TYPEDEF TRIPLE '<' tipo '>' . ID  (13)

	ID  shift 126
	.  error


state 105
	parametro : tipo ID .  (18)

	.  reduce 18


state 106
	declaracion_funciones : ID FUN ID parametros_formal BEGIN . cuerpo_funcion END  (15)

	IF  shift 4
	OUTF  shift 5
	TYPEDEF  shift 6
	ID  shift 7
	WHILE  shift 8
	GOTO  shift 9
	INTEGER  shift 10
	DOUBLE  shift 11
	.  error

	sentencias  goto 127
	sentencia  goto 13
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	declaracion_variable  goto 16
	declaracion_funciones  goto 17
	declaracion_subtipo  goto 18
	tipo  goto 19
	cuerpo_funcion  goto 128
	asignacion  goto 20
	sentencia_IF  goto 21
	sentencia_WHILE  goto 22
	sentencia_goto  goto 23


state 107
	parametros_formal : parametros_formal parametro . ','  (16)

	','  shift 129
	.  error


state 108
	asignacion : ID '{' CTE '}' ASIGNACION . expresion_arit  (28)

	CTE  shift 39
	ID  shift 40
	'-'  shift 41
	.  error

	CTE_con_sig  goto 42
	expresion_arit  goto 130
	invocacion  goto 44
	termino  goto 45
	factor  goto 46


state 109
	sentencia_WHILE : WHILE '(' condicion ')' bloque_unidad . ';'  (71)

	';'  shift 131
	.  error


state 110
	declaracion_funciones : tipo FUN ID parametros_formal BEGIN . cuerpo_funcion END  (14)

	IF  shift 4
	OUTF  shift 5
	TYPEDEF  shift 6
	ID  shift 7
	WHILE  shift 8
	GOTO  shift 9
	INTEGER  shift 10
	DOUBLE  shift 11
	.  error

	sentencias  goto 127
	sentencia  goto 13
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	declaracion_variable  goto 16
	declaracion_funciones  goto 17
	declaracion_subtipo  goto 18
	tipo  goto 19
	cuerpo_funcion  goto 132
	asignacion  goto 20
	sentencia_IF  goto 21
	sentencia_WHILE  goto 22
	sentencia_goto  goto 23


state 111
	factor : ID '{' CTE_con_sig '}' .  (43)

	.  reduce 43


state 112
	parametros_formal : parametros_formal . parametro ','  (16)
	invocacion : ID '(' tipo parametros_formal . ')'  (30)

	INTEGER  shift 10
	DOUBLE  shift 11
	')'  shift 133
	.  error

	tipo  goto 81
	parametro  goto 107


state 113
	invocacion : ID '(' parametro_real ')' .  (29)

	.  reduce 29


state 114
	list_expre : list_expre ',' . expresion_arit  (32)

	CTE  shift 39
	ID  shift 40
	'-'  shift 41
	.  error

	CTE_con_sig  goto 42
	expresion_arit  goto 134
	invocacion  goto 44
	termino  goto 45
	factor  goto 46


state 115
	bloque_unidad_multiple : THEN BEGIN . bloque_sent_ejecutables END  (64)

	IF  shift 4
	OUTF  shift 5
	ID  shift 116
	WHILE  shift 8
	GOTO  shift 9
	.  error

	sentencia_ejecutable  goto 117
	asignacion  goto 20
	sentencia_IF  goto 21
	sentencia_WHILE  goto 22
	sentencia_goto  goto 23
	bloque_sent_ejecutables  goto 135
	bloque_sentencia_simple  goto 136


state 116
	asignacion : ID . ASIGNACION expresion_arit  (27)
	asignacion : ID . '{' CTE '}' ASIGNACION expresion_arit  (28)

	ASIGNACION  shift 29
	'{'  shift 30
	.  error


state 117
	bloque_sentencia_simple : sentencia_ejecutable .  (68)

	.  reduce 68


state 118
	bloque_unidad_simple : THEN bloque_sentencia_simple .  (65)

	.  reduce 65


state 119
	bloque_else_simple : THEN . ELSE bloque_sentencia_simple  (61)

	ELSE  shift 137
	.  error


state 120
	bloque_else_multiple : ELSE . BEGIN bloque_sent_ejecutables END  (60)

	BEGIN  shift 138
	.  error


state 121
	sentencia_IF : IF '(' condicion ')' bloque_unidad END_IF . ';'  (49)

	';'  shift 139
	.  error


state 122
	sentencia_IF : IF '(' condicion ')' bloque_unidad bloque_else . END_IF ';'  (48)

	END_IF  shift 140
	.  error


state 123
	bloque_else : bloque_else_simple .  (58)

	.  reduce 58


state 124
	bloque_else : bloque_else_multiple .  (59)

	.  reduce 59


state 125
	declaracion_subtipo : TYPEDEF ID ASIGNACION tipo '{' CTE_con_sig . ',' CTE_con_sig '}'  (12)

	','  shift 141
	.  error


state 126
	declaracion_subtipo : TYPEDEF TRIPLE '<' tipo '>' ID .  (13)

	.  reduce 13


state 127
	sentencias : sentencias . sentencia ';'  (2)
	cuerpo_funcion : sentencias . RET '(' expresion_arit ')'  (19)
	cuerpo_funcion : sentencias .  (20)

	IF  shift 4
	OUTF  shift 5
	TYPEDEF  shift 6
	RET  shift 142
	ID  shift 7
	WHILE  shift 8
	GOTO  shift 9
	INTEGER  shift 10
	DOUBLE  shift 11
	END  reduce 20

	sentencia  goto 34
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	declaracion_variable  goto 16
	declaracion_funciones  goto 17
	declaracion_subtipo  goto 18
	tipo  goto 19
	asignacion  goto 20
	sentencia_IF  goto 21
	sentencia_WHILE  goto 22
	sentencia_goto  goto 23


state 128
	declaracion_funciones : ID FUN ID parametros_formal BEGIN cuerpo_funcion . END  (15)

	END  shift 143
	.  error


state 129
	parametros_formal : parametros_formal parametro ',' .  (16)

	.  reduce 16


state 130
	asignacion : ID '{' CTE '}' ASIGNACION expresion_arit .  (28)
	expresion_arit : expresion_arit . '+' termino  (34)
	expresion_arit : expresion_arit . '-' termino  (35)

	'+'  shift 68
	'-'  shift 69
	IF  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	END  reduce 28
	END_IF  reduce 28
	OUTF  reduce 28
	ID  reduce 28
	WHILE  reduce 28
	GOTO  reduce 28
	';'  reduce 28


state 131
	sentencia_WHILE : WHILE '(' condicion ')' bloque_unidad ';' .  (71)

	.  reduce 71


state 132
	declaracion_funciones : tipo FUN ID parametros_formal BEGIN cuerpo_funcion . END  (14)

	END  shift 144
	.  error


state 133
	invocacion : ID '(' tipo parametros_formal ')' .  (30)

	.  reduce 30


state 134
	list_expre : list_expre ',' expresion_arit .  (32)
	expresion_arit : expresion_arit . '+' termino  (34)
	expresion_arit : expresion_arit . '-' termino  (35)

	'+'  shift 68
	'-'  shift 69
	','  reduce 32
	')'  reduce 32


state 135
	bloque_unidad_multiple : THEN BEGIN bloque_sent_ejecutables . END  (64)
	bloque_sent_ejecutables : bloque_sent_ejecutables . bloque_sentencia_simple  (66)

	IF  shift 4
	END  shift 145
	OUTF  shift 5
	ID  shift 116
	WHILE  shift 8
	GOTO  shift 9
	.  error

	sentencia_ejecutable  goto 117
	asignacion  goto 20
	sentencia_IF  goto 21
	sentencia_WHILE  goto 22
	sentencia_goto  goto 23
	bloque_sentencia_simple  goto 146


state 136
	bloque_sent_ejecutables : bloque_sentencia_simple .  (67)

	.  reduce 67


state 137
	bloque_else_simple : THEN ELSE . bloque_sentencia_simple  (61)

	IF  shift 4
	OUTF  shift 5
	ID  shift 116
	WHILE  shift 8
	GOTO  shift 9
	.  error

	sentencia_ejecutable  goto 117
	asignacion  goto 20
	sentencia_IF  goto 21
	sentencia_WHILE  goto 22
	sentencia_goto  goto 23
	bloque_sentencia_simple  goto 147


state 138
	bloque_else_multiple : ELSE BEGIN . bloque_sent_ejecutables END  (60)

	IF  shift 4
	OUTF  shift 5
	ID  shift 116
	WHILE  shift 8
	GOTO  shift 9
	.  error

	sentencia_ejecutable  goto 117
	asignacion  goto 20
	sentencia_IF  goto 21
	sentencia_WHILE  goto 22
	sentencia_goto  goto 23
	bloque_sent_ejecutables  goto 148
	bloque_sentencia_simple  goto 136


state 139
	sentencia_IF : IF '(' condicion ')' bloque_unidad END_IF ';' .  (49)

	.  reduce 49


state 140
	sentencia_IF : IF '(' condicion ')' bloque_unidad bloque_else END_IF . ';'  (48)

	';'  shift 149
	.  error


state 141
	declaracion_subtipo : TYPEDEF ID ASIGNACION tipo '{' CTE_con_sig ',' . CTE_con_sig '}'  (12)

	CTE  shift 39
	'-'  shift 41
	.  error

	CTE_con_sig  goto 150


state 142
	cuerpo_funcion : sentencias RET . '(' expresion_arit ')'  (19)

	'('  shift 151
	.  error


state 143
	declaracion_funciones : ID FUN ID parametros_formal BEGIN cuerpo_funcion END .  (15)

	.  reduce 15


state 144
	declaracion_funciones : tipo FUN ID parametros_formal BEGIN cuerpo_funcion END .  (14)

	.  reduce 14


state 145
	bloque_unidad_multiple : THEN BEGIN bloque_sent_ejecutables END .  (64)

	.  reduce 64


state 146
	bloque_sent_ejecutables : bloque_sent_ejecutables bloque_sentencia_simple .  (66)

	.  reduce 66


state 147
	bloque_else_simple : THEN ELSE bloque_sentencia_simple .  (61)

	.  reduce 61

